operators/manifests/cnpg-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnpg-webhook-service
  namespace: cnpg-system
  labels:
    app.kubernetes.io/name: cnpg
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cnpg
  ports:
    - name: webhook
      port: 443
      targetPort: 9443
      protocol: TCP
    - name: metrics
      port: 8080
      targetPort: 8080
      protocol: TCP
